Few more lists questions done

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -873,7 +873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -886,14 +886,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter a string:He is a string to check the longest word in it.\n",
             "Longest word in the string is: longest\n"
           ]
         }
       ],
       "source": [
-        "# Approach - We will take list of words from string then sort it according to length\n",
-        "# Since sorting default (ascending order) so last item is the Max length word\n",
+        "# Approach - We will take list of words from string then get max according to length\n",
         "\n",
         "\n",
         "# Take input string from user\n",
@@ -902,11 +900,8 @@
         "# Split string into words\n",
         "list_of_words = string_inpt.split(' ')\n",
         "\n",
-        "# Get sorted list of words as per length of word\n",
-        "sorted_words_by_length = sorted(list_of_words, key= len)\n",
-        "\n",
         "# Get Longest word\n",
-        "longest_word = sorted_words_by_length[-1]\n",
+        "longest_word = max(list_of_words, key= len)\n",
         "\n",
         "# Print the longest word\n",
         "print(f'Longest word in the string is: {longest_word}')"
@@ -923,7 +918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -936,15 +931,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter a string:Here is a string to check the longest word in it.\n",
             "Shortest word in the string is: a\n"
           ]
         }
       ],
       "source": [
-        "# Approach - We will take list of words from string then sort it according to length\n",
-        "# Since sorting default (ascending order) so first item is the min length word i.e shortest\n",
-        "# Here we will create a function to get shortest length word\n",
+        "# Approach - We will take list of words from string then min according to length\n",
         "\n",
         "# Function definition - Takes a string as input and return Shortest word\n",
         "def get_shortest_word(string_input:str) -> str:\n",
@@ -952,10 +944,10 @@
         "  list_of_words = string_input.split(' ')\n",
         "\n",
         "  # Get sorted list of words as per length of word\n",
-        "  sorted_words_by_length = sorted(list_of_words, key= len)\n",
+        "  sorted_word = min(list_of_words, key= len)\n",
         "\n",
         "  # return the shortest word i.e. first word\n",
-        "  return sorted_words_by_length[0]\n",
+        "  return sorted_word\n",
         "\n",
         "\n",
         "# Take input string from user\n",
@@ -3674,10 +3666,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[19, 28, 33, 79, 415, 2, 1, 76]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach us inbuilt function i.e. shuffle in the random module\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "# Create a list\n",
+        "list_to_shuffle = [1,2,33,415,76,79,28,19]\n",
+        "\n",
+        "# Shuffle the elements of list randomly\n",
+        "random.shuffle(list_to_shuffle)\n",
+        "\n",
+        "# Print result\n",
+        "print(list_to_shuffle)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3688,9 +3701,32 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {},
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 6, 24, 120, 720, 5040, 40320, 362880, 3628800]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# function - takes n as input and return factorial of n (recurssive function)\n",
+        "def get_factorial(n:int) -> int:\n",
+        "    if(n == 1):\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return n * get_factorial(n-1)\n",
+        "\n",
+        "# Compute Factorial for number 1 to 10 (10 inclusive)\n",
+        "factorials = [get_factorial(num) for num in range(1, 11)]\n",
+        "\n",
+        "# Print result\n",
+        "print(factorials)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3701,10 +3737,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Contains common elements : True\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - create a set out of lists and then take intersection (common elements) [We can even use & operator to check common elements in set]\n",
+        "\n",
+        "# Create lists\n",
+        "list_1 = [1,4,5,6,7,90]\n",
+        "list_2 = [4,7,3,55,66,89]\n",
+        "\n",
+        "# Create set from lists\n",
+        "set_1 = set(list_1)\n",
+        "set_2 = set(list_2)\n",
+        "\n",
+        "# Check for common element\n",
+        "has_common_element = len(set_1.intersection(set_2)) > 0\n",
+        "\n",
+        "# Print result\n",
+        "print(f'Contains common elements : {has_common_element}')\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3715,10 +3775,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - using inbuilt function clear\n",
+        "\n",
+        "# Create list\n",
+        "list_1 = [1,4,5,6,7,90]\n",
+        "\n",
+        "# Clearing elements of list\n",
+        "list_1.clear()\n",
+        "\n",
+        "# Print cleared list\n",
+        "print(list_1)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3729,10 +3808,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 0, 5, 6, 0, 90, 12, 0]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - bruteforce approach, iterate and replace if negative\n",
+        "\n",
+        "def replace_negatives(list_input: list, num_to_replace_with: int) -> None:\n",
+        "    for index in range(0, len(list_input)):\n",
+        "        if(list_input[index] < 0):\n",
+        "            list_input[index] = num_to_replace_with\n",
+        "\n",
+        "# Create list\n",
+        "list_1 = [1, -4, 5, 6, -7,90, 12, -34]\n",
+        "\n",
+        "# Replace negatives with zero (0)\n",
+        "replace_negatives(list_1, 0)\n",
+        "\n",
+        "# print list\n",
+        "print(list_1)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3743,10 +3846,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['My', 'name', 'is', 'Robin', 'Pabbi.', 'I', 'am', 'a', 'passionate', 'coder.']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Split the string\n",
+        "\n",
+        "# Take a string input\n",
+        "string_to_split = input('Enter your string to split into words: ')\n",
+        "\n",
+        "# convert to list of words\n",
+        "list_of_words = string_to_split.split(' ')\n",
+        "\n",
+        "# print result\n",
+        "print(list_of_words)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3757,10 +3879,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "My name is Robin Pabbi. I am a passionate coder.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - join function\n",
+        "\n",
+        "# Create a list\n",
+        "list_of_words = ['My', 'name', 'is', 'Robin', 'Pabbi.', 'I', 'am', 'a', 'passionate', 'coder.']\n",
+        "\n",
+        "# Create a string\n",
+        "string_result = ' '.join(list_of_words)\n",
+        "\n",
+        "# print result\n",
+        "print(string_result)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3771,10 +3912,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - takes number 'num' and return the list of n power of 2 - 2**n -- for each element where n is its index\n",
+        "def create_list_of_n_power_2(num_of_elements: int) -> list:\n",
+        "    return [2**i for i in range(0, num_of_elements)]\n",
+        "\n",
+        "# Take input from user\n",
+        "num_of_elements = int(input('Enter number of elements in the list: '))\n",
+        "\n",
+        "# Compute list\n",
+        "result = create_list_of_n_power_2(num_of_elements)\n",
+        "\n",
+        "# Print result\n",
+        "print(result)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3785,10 +3947,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "This is a longest string in this list for sure.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach -  Using max funtion\n",
+        "\n",
+        "# Create list of strings\n",
+        "list_of_strings = ['Hi', 'Hello this is a string', 'This is a longest string in this list for sure.', 'Good morning']\n",
+        "\n",
+        "# Get longest string\n",
+        "longest_string = max(list_of_strings, key=len)\n",
+        "\n",
+        "# Print result\n",
+        "print(longest_string)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3799,10 +3980,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hi\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach -  Using min funtion\n",
+        "\n",
+        "# Create list of strings\n",
+        "list_of_strings = ['Hi', 'Hello this is a string', 'This is a longest string in this list for sure.', 'Good morning']\n",
+        "\n",
+        "# Get longest string\n",
+        "shortest_string = min(list_of_strings, key=len)\n",
+        "\n",
+        "# Print result\n",
+        "print(shortest_string)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3813,10 +4013,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 3, 6, 10, 15, 21, 28, 36, 45, 55, 66, 78, 91, 105, 120]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - formula for n level = (n +1)* n/2\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "def get_triangular_number(level: int) -> int:\n",
+        "    return math.floor(level * (level + 1)/2)\n",
+        "\n",
+        "# Take a input of number\n",
+        "n = int(input('Enter the number of elements: '))\n",
+        "\n",
+        "# Create list of triangular numbers\n",
+        "triangular_numbers = [ get_triangular_number(num) for num in range(1, n +1)]\n",
+        "\n",
+        "# Print result\n",
+        "print(triangular_numbers)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3844,11 +4068,6 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": []
     }
   ],
