--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -4051,10 +4051,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "List 2 is subsequence of list 1: True\n",
+            "List 3 is subsequence of list 1: False\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - We can use list comprehension and all function to achieve this\n",
+        "# Explanation - Actually we will check if for all the items in subsequence list exists in master list\n",
+        "#          so for each element in subsequence list we see if x in master list and output of this is bool list\n",
+        "#          all the elements of the above list should be true then it means subsequence is contained in master list \n",
+        "\n",
+        "\n",
+        "# Function definition - It takes master list and a subsequence list and return True if subsequence list is contained in master list else False\n",
+        "def is_list_subsequence(master_list: list, list_candidate_of_subsequence: list) -> bool:\n",
+        "    element_contained_list = [el in  master_list for el in list_candidate_of_subsequence]\n",
+        "    # Below statement will check if all the elements of the list are True or not\n",
+        "    return all(element_contained_list)\n",
+        "\n",
+        "# Create lists\n",
+        "list_1 = [1,2,3,4,5,6,7,8,9,10,11,12,14]\n",
+        "list_2 = [3,6,12,14]\n",
+        "list_3 = [3,6,12,14, 15]\n",
+        "\n",
+        "# Check if list_2 is subsequence of list_1\n",
+        "is_list2_subsequence = is_list_subsequence(list_1, list_2)\n",
+        "# Check if list_3 is subsequence of list_1\n",
+        "is_list3_subsequence = is_list_subsequence(list_1, list_3)\n",
+        "\n",
+        "# Print result\n",
+        "print(f'List 2 is subsequence of list 1: {is_list2_subsequence}')\n",
+        "print(f'List 3 is subsequence of list 1: {is_list3_subsequence}')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4065,10 +4100,660 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Robin', 'Pabbi', 'AI', 'ML', 'DL', 'CV', 'PwSkills']\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "def swap_elements_of_list(list_input: list, index1: int, index2: int) -> None:\n",
+        "    temp_val = list_input[index1]\n",
+        "    list_input[index1] = list_input[index2]\n",
+        "    list_input[index2] = temp_val\n",
+        "\n",
+        "# Create lists\n",
+        "list_1 = ['Robin', 'PwSkills', 'AI', 'ML', 'DL', 'CV', 'Pabbi']\n",
+        "\n",
+        "# Swap values of index 1 (2nd element) and index 6 or (-1)\n",
+        "swap_elements_of_list(list_1, 1, 6)\n",
+        "\n",
+        "# Print list\n",
+        "print(list_1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Tuple Based Practice Problem :"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. Create a tuple with integers from 1 to 5."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1, 2, 3, 4, 5)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "t = (1,2,3,4,5)\n",
+        "\n",
+        "# Print tuple\n",
+        "print(t)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Access the third element of a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "30\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "t = (1,12,30,24,5)\n",
+        "\n",
+        "# Access third element (index 2)\n",
+        "third_element = t[2]\n",
+        "\n",
+        "# Print third element\n",
+        "print(third_element)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Find the length of a tuple without using the `len()` function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Length of tuple is: 10\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach iterate on tuple items and increment counter variable\n",
+        "\n",
+        "# Function with code of fining length\n",
+        "def length(tuple_input) -> int:\n",
+        "  count = 0\n",
+        "  for el in tuple_input:\n",
+        "    count += 1\n",
+        "  return count\n",
+        "\n",
+        "# Create a tuple\n",
+        "tuple_of_numbers = (1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
+        "\n",
+        "# Get length using out function\n",
+        "length_of_tuple = length(tuple_of_numbers)\n",
+        "\n",
+        "# Print output\n",
+        "print(f'Length of tuple is: {length_of_tuple}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4. Count the occurrences of an element in a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No. of occurrences : 3\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - count function\n",
+        "\n",
+        "# Create a tuple\n",
+        "tple = (61, 12, 5, 99, 77, 80, 99, 99, 100, '2', 'Robin', '99')\n",
+        "\n",
+        "# Count number of occurrences of element 9 (int 9)\n",
+        "count_of_occurence = tple.count(99)\n",
+        "\n",
+        "# print output\n",
+        "print(f'No. of occurrences : {count_of_occurence}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5. Find the index of the first occurrence of an element in a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elements exists at index: 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "tuple_1 = (10, 23, 15, 66, 67, 80, 345)\n",
+        "\n",
+        "# Element to find\n",
+        "element_to_find = 15\n",
+        "\n",
+        "# Check if elements exists or not - to avoid the error\n",
+        "if element_to_find in tuple_1:\n",
+        "  # Get index of the first occurrence\n",
+        "  index_of_index = tuple_1.index(element_to_find)\n",
+        "  # Print result\n",
+        "  print(f'Elements exists at index: {index_of_index}')\n",
+        "else:\n",
+        "  print('Elements does not exist in tuple.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6. Check if an element exists in a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elements does not exist in tuple.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "tuple_1 = (10, 23, 15, 66, 67, 80, 345)\n",
+        "\n",
+        "# Element to find\n",
+        "element_to_find = 150\n",
+        "\n",
+        "# Check if elements exists or not\n",
+        "if element_to_find in tuple_1:\n",
+        "  print(f'Elements exists in tuple')\n",
+        "else:\n",
+        "  print('Elements does not exist in tuple.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 7. Convert a tuple to a list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[10, 23, 15, 66, 67, 80, 345, 'Pwskills']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "tuple_1 = (10, 23, 15, 66, 67, 80, 345, 'Pwskills')\n",
+        "\n",
+        "# Type cast of tuple to list\n",
+        "list_1 = list(tuple_1)\n",
+        "\n",
+        "# Print list\n",
+        "print(list_1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 8. Convert a list to a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(100, 64, 50, 3, 'Pwskills')\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a list\n",
+        "list_2 = [100, 64, 50, 3, 'Pwskills']\n",
+        "\n",
+        "# Type cast of list to tuple\n",
+        "tuple_2 = tuple(list_2)\n",
+        "\n",
+        "# Print tuple\n",
+        "print(tuple_2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 9. Unpack the elements of a tuple into variables."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x = 1\n",
+            "y = 20\n",
+            "z = 56\n",
+            "s = 89\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create tuple\n",
+        "tple = (1,20, 56, 89)\n",
+        "\n",
+        "# unpack into variables\n",
+        "x, y, z, s = tple\n",
+        "\n",
+        "# Print result\n",
+        "print(f'x = {x}')\n",
+        "print(f'y = {y}')\n",
+        "print(f'z = {z}')\n",
+        "print(f's = {s}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 10. Create a tuple of even numbers from 1 to 10."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tuple of even numbers from 1 to 10: (2, 4, 6, 8, 10)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Using tuple comprehension and checking for even number\n",
+        "# Using Range 1 to 11 because upperbound is exlusive\n",
+        "\n",
+        "# Create a tuple of even numbers\n",
+        "even_numbers_tuple = tuple(num for num in range(1, 11) if num % 2 == 0)\n",
+        "\n",
+        "# Print the tuple of even numbers\n",
+        "print(f'Tuple of even numbers from 1 to 10: {even_numbers_tuple}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 11. Create a tuple of odd numbers from 1 to 10."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tuple of odd numbers from 1 to 10: (1, 3, 5, 7, 9)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Using tuple comprehension and checking for not even (odd) number\n",
+        "# Using Range 1 to 11 because upperbound is exlusive\n",
+        "\n",
+        "# Create a tuple of odd numbers\n",
+        "odd_numbers_tuple = tuple(num for num in range(1, 11) if num % 2 != 0)\n",
+        "\n",
+        "# Print the tuple of odd numbers\n",
+        "print(f'Tuple of odd numbers from 1 to 10: {odd_numbers_tuple}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 12. Concatenate two tuples."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('Robin', '1', 2, 3, 4, 'Pabbi', 6, 7, 2, 'PWskills')\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create tuples\n",
+        "tuple_1 = ('Robin', '1', 2, 3, 4)\n",
+        "tuple_2 = ('Pabbi', 6, 7, 2, 'PWskills')\n",
+        "\n",
+        "# Concatenate tuples\n",
+        "result_tuple = tuple_1 + tuple_2\n",
+        "\n",
+        "# Print result \n",
+        "print(result_tuple)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 13. Repeat a tuple three times."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "tple = (1,2,3,4,5)\n",
+        "\n",
+        "# Repeat 3 times\n",
+        "repeated_tuple = tple * 3\n",
+        "\n",
+        "# Print result\n",
+        "print(repeated_tuple)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 14. Check if a tuple is empty."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 15. Create a nested tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 16. Access the first element of a nested tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 17. Create a tuple with a single element."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 18. Compare two tuples."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 19. Delete a tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 20. Slice a tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 21. Find the maximum value in a tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 22. Find the minimum value in a tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 23. Convert a string to a tuple of characters."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 24. Convert a tuple of characters to a string."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 25. Create a tuple from multiple data types."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 26. Check if two tuples are identical."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 27. Sort the elements of a tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 28. Convert a tuple of integers to a tuple of strings."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 29. Convert a tuple of strings to a tuple of integers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 30. Merge two tuples."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 31. Flatten a nested tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 32. Create a tuple of the first 5 prime numbers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 33. Check if a tuple is a palindrome."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 34. Create a tuple of squares of numbers from 1 to 5."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 35. Filter out all even numbers from a tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 36. Multiply all elements in a tuple by 2."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 37. Create a tuple of random numbers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 38. Check if a tuple is sorted."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 39. Rotate a tuple to the left by `n` positions.\n",
+        "### 40. Rotate a tuple to the right by `n` positions.\n",
+        "### 41. Create a tuple of the first 5 Fibonacci numbers.\n",
+        "### 42. Create a tuple from user input.\n",
+        "### 43. Swap two elements in a tuple.\n",
+        "### 44. Reverse the elements of a tuple.\n",
+        "### 45. Create a tuple of the first `n` powers of 2.\n",
+        "### 46. Find the longest string in a tuple of strings.\n",
+        "### 47. Find the shortest string in a tuple of strings.\n",
+        "### 48. Create a tuple of the first `n` triangular numbers.\n",
+        "### 49. Check if a tuple contains another tuple as a subsequence.\n",
+        "### 50. Create a tuple of alternating 1s and 0s of length `n`."
+      ]
     }
   ],
   "metadata": {
