Some more tuple questions solved

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -6,7 +6,7 @@
         "id": "rqaKSZ7_BfaB"
       },
       "source": [
-        "# This is practice test on the String Based Problems"
+        "# String Based Assignment Problem"
       ]
     },
     {
@@ -3087,7 +3087,7 @@
         "list_1 = ['Hi', 1, 2, 4, 'Robin']\n",
         "list_2 = ['Pabbi', 5, 6, 7]\n",
         "\n",
-        "# Find difference list3 - list4\n",
+        "# concatenation\n",
         "merged_list = list_1 + list_2\n",
         "\n",
         "# Print values\n",
@@ -4489,7 +4489,7 @@
         }
       ],
       "source": [
-        "# Approach - Using tuple comprehension and checking for not even (odd) number\n",
+        "# Approach - Using version of tuple comprehension and checking for not even (odd) number\n",
         "# Using Range 1 to 11 because upperbound is exlusive\n",
         "\n",
         "# Create a tuple of odd numbers\n",
@@ -4570,10 +4570,61 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "E tuple is empty: True\n",
+            "tple is empty: False\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create an empty tuple\n",
+        "e_tuple = tuple()\n",
+        "\n",
+        "# create non empty tulple\n",
+        "tple = (2,3,4)\n",
+        "\n",
+        "# Check for emptyness\n",
+        "is_e_tuple_empty = len(e_tuple) == 0\n",
+        "is_tple_empty = len(tple) == 0\n",
+        "\n",
+        "# Print outputs\n",
+        "print(f'E tuple is empty: {is_e_tuple_empty}')\n",
+        "print(f'tple is empty: {is_tple_empty}')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 15. Create a nested tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1, 2, (3, 4, 5, 6), (5, 6, 7))\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple with nested tuples\n",
+        "tuple_with_nested_tuple = (1,2, (3,4,5,6), (5,6,7))\n",
+        "\n",
+        "# Print tuple\n",
+        "print(tuple_with_nested_tuple)"
       ]
     },
     {
@@ -4584,10 +4635,95 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Simple can be that tuple have only have one tuple\n",
+        "t = ((10,2,3),)\n",
+        "\n",
+        "# Access and print first element\n",
+        "print(t[0][0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Little more complex - solution\n",
+        "# Since tuple can have hetrogenous data like numbers, strings, other tuples \n",
+        "# we will have to find first tuple and return first element of that tuple\n",
+        "\n",
+        "def get_first_element_of_nested_tuple(tuple_input: tuple):\n",
+        "    for element in tuple_input:\n",
+        "        if(type(element) is tuple):\n",
+        "            return element[0]\n",
+        "    # If no nested touple found then return none\n",
+        "    return None\n",
+        "\n",
+        "# Create a tuple\n",
+        "tple = (1,2, (3,4,5,6), 'Robin')\n",
+        "\n",
+        "# Get first element of tuple - should return 3\n",
+        "first_element_tple = get_first_element_of_nested_tuple(tple)\n",
+        "\n",
+        "# Print result\n",
+        "print(first_element_tple)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 17. Create a tuple with a single element."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'tuple'>\n",
+            "('Robin',)\n",
+            "1\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create touple with single element\n",
+        "tple_with_one_elemenet = ('Robin',)\n",
+        "\n",
+        "# Print type\n",
+        "print(type(tple_with_one_elemenet))\n",
+        "\n",
+        "# Print tuple\n",
+        "print(tple_with_one_elemenet)\n",
+        "\n",
+        "# Print length\n",
+        "print(len(tple_with_one_elemenet))"
       ]
     },
     {
@@ -4598,10 +4734,91 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - we can use greater than (>), less than (<) or equal to (==) operators\n",
+        "# These operators check if all elements at same index are try for the operator\n",
+        "# like for >, it will compare all the items (at corresponding index) are greator than other\n",
+        "\n",
+        "tuple1 = (1,2,3)\n",
+        "tuple2 = (3,4,5)\n",
+        "tuple3 = (1,2,3)\n",
+        "tuple4 = (3,2,1)\n",
+        "\n",
+        "# Print result of >\n",
+        "print(tuple2 > tuple1)  # True\n",
+        "print(tuple2 > tuple4)  # True\n",
+        "print(tuple4 > tuple2)  # False\n",
+        "\n",
+        "# print result of <\n",
+        "print(tuple1 < tuple2)  # True\n",
+        "print(tuple2 < tuple4)  # False\n",
+        "\n",
+        "# Print equality\n",
+        "print(tuple1 == tuple3)  # True"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 19. Delete a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tuple before deletion: (1, 2, 3)\n"
+          ]
+        },
+        {
+          "ename": "NameError",
+          "evalue": "name 'tuple_to_delete' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[42], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[39mdel\u001b[39;00m(tuple_to_delete)\n\u001b[0;32m     12\u001b[0m \u001b[39m# Printing now will raise error\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTuple after deletion: \u001b[39m\u001b[39m{\u001b[39;00mtuple_to_delete\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'tuple_to_delete' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "# We can use inbuilt function to delete tuple - del funtion\n",
+        "\n",
+        "# Create tuple\n",
+        "tuple_to_delete = (1,2,3)\n",
+        "\n",
+        "# Print tuple before deletion\n",
+        "print(f'Tuple before deletion: {tuple_to_delete}')\n",
+        "\n",
+        "# Delete tuple\n",
+        "del(tuple_to_delete)\n",
+        "\n",
+        "# Printing now will raise ERROR\n",
+        "print(f'Tuple after deletion: {tuple_to_delete}')\n"
       ]
     },
     {
@@ -4612,10 +4829,76 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "First half : (1, 2, 3, 4, 5)\n",
+            "Aleternatibe elements : (1, 3, 5, 7, 9)\n",
+            "Reverse of tuple : (10, 9, 8, 7, 6, 5, 4, 3, 2, 1)\n",
+            "Second half : (6, 7, 8, 9, 10)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Tuple slicing\n",
+        "\n",
+        "tple = (1,2,3,4,5,6,7,8,9,10)\n",
+        "\n",
+        "# First 5 elements\n",
+        "first_five_elements = tple[:5]\n",
+        "\n",
+        "# Aleternative elements\n",
+        "alternative_elements = tple[::2]\n",
+        "\n",
+        "# Reverse a tuple\n",
+        "reverse_tuple = tple[::-1]\n",
+        "\n",
+        "# Elements from position 6 (index 5) to end\n",
+        "second_half_elements = tple[5:]\n",
+        "\n",
+        "# Print results\n",
+        "print(f'First half : {first_five_elements}')\n",
+        "print(f'Aleternatibe elements : {alternative_elements}')\n",
+        "print(f'Reverse of tuple : {reverse_tuple}')\n",
+        "print(f'Second half : {second_half_elements}')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 21. Find the maximum value in a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "99\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - using max inbuilt fnction\n",
+        "\n",
+        "# create a tuple\n",
+        "tuple_to_find_max = (2, 3, 44, 52, 23, 99, 34, 21)\n",
+        "\n",
+        "# Find max element\n",
+        "max_element = max(tuple_to_find_max)\n",
+        "\n",
+        "# Print max value\n",
+        "print(max_element)"
       ]
     },
     {
@@ -4626,10 +4909,60 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - using min inbuilt fnction\n",
+        "\n",
+        "# create a tuple\n",
+        "tuple_to_find_min = (2, 3, 44, 52, 23, 99, 34, 21)\n",
+        "\n",
+        "# Find min element\n",
+        "min_element = min(tuple_to_find_min)\n",
+        "\n",
+        "# Print min value\n",
+        "print(min_element)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 23. Convert a string to a tuple of characters."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('R', 'o', 'b', 'i', 'n')\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Take a string input from user\n",
+        "string_inpt = input('Enter a string: ')\n",
+        "\n",
+        "# Convert string to tuple\n",
+        "tuple_from_string = tuple(string_inpt)\n",
+        "\n",
+        "# print tuple\n",
+        "print(tuple_from_string)"
       ]
     },
     {
@@ -4640,10 +4973,55 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Robin\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "tuple_of_chars = ('R', 'o', 'b', 'i', 'n')\n",
+        "\n",
+        "# Convert to string\n",
+        "string_from_tuple = ''.join(tuple_of_chars)\n",
+        "\n",
+        "# Print string\n",
+        "print(string_from_tuple)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 25. Create a tuple from multiple data types."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1, 3, (4+5j), 6.78, 9.2, 'Robin', [11, 22], {3, 4})\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create tuple of multiple types\n",
+        "hetro_tuple = (1, 3, 4+5j, 6.78, 9.2, 'Robin', [11, 22], {3,4})\n",
+        "\n",
+        "# print tuple\n",
+        "print(hetro_tuple)"
       ]
     },
     {
@@ -4654,10 +5032,65 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create tuples to compare\n",
+        "tuple1 = (2, 5, 8)\n",
+        "tuple2 = ('2', 3, 4)\n",
+        "tuple3 = ('2', '3', '8')\n",
+        "tuple4 = (2, 5, 8)\n",
+        "\n",
+        "# print comparision to check if identical tuples\n",
+        "print(tuple1 == tuple4) # True\n",
+        "print(tuple1 == tuple2) # False\n",
+        "print(tuple1 == tuple3) # False"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 27. Sort the elements of a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1, 4, 8, 32, 34, 38, 56, 67, 99)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Since tuple is immutable to inplace sorting it not provided\n",
+        "# We can use sorted in build function which return list then we type cast it to tuple\n",
+        "\n",
+        "# Create tuple\n",
+        "tuple_to_sort = (34, 56, 32, 8, 67, 38, 99, 1, 4)\n",
+        "\n",
+        "# Sort tuple\n",
+        "sorted_tuple = tuple(sorted(tuple_to_sort))\n",
+        "\n",
+        "# Print sorted tuple\n",
+        "print(sorted_tuple)"
       ]
     },
     {
@@ -4668,10 +5101,60 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('26', '9', '17', '8', '143')\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create tuple of Integer values\n",
+        "tuple_of_numbers = (26, 9, 17, 8, 143)\n",
+        "\n",
+        "# Convert int elements to string\n",
+        "# Below is short cut to cast a list to tuple from list comprehension\n",
+        "tuple_string_integers = tuple(str(strNum) for strNum in tuple_of_numbers)\n",
+        "\n",
+        "# Print string values of tuple\n",
+        "print(tuple_string_integers)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 29. Convert a tuple of strings to a tuple of integers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(26, 9, 17, 8, 143)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create tuple of Integer values as string\n",
+        "tuple_string_integers = ('26', '9', '17', '8', '143')\n",
+        "\n",
+        "# Convert string elements to numbers (integers)\n",
+        "# Below is short cut to cast a list to tuple from list comprehension\n",
+        "tuple_of_numbers = tuple(int(strNum) for strNum in tuple_string_integers)\n",
+        "\n",
+        "# Print numeric tuple\n",
+        "print(tuple_of_numbers)"
       ]
     },
     {
@@ -4682,11 +5165,45 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('Hi', 1, 2, 4, 'Robin', 'Pabbi', 5, 6, 7)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Use concatenation + operator\n",
+        "\n",
+        "# Create Tuples\n",
+        "tuple_1 = ('Hi', 1, 2, 4, 'Robin')\n",
+        "tuple_2 = ('Pabbi', 5, 6, 7)\n",
+        "\n",
+        "# concatenation\n",
+        "merged_tuple = tuple_1 + tuple_2\n",
+        "\n",
+        "# Print values\n",
+        "print(merged_tuple)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 31. Flatten a nested tuple."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -4741,11 +5258,41 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 39. Rotate a tuple to the left by `n` positions.\n",
-        "### 40. Rotate a tuple to the right by `n` positions.\n",
-        "### 41. Create a tuple of the first 5 Fibonacci numbers.\n",
-        "### 42. Create a tuple from user input.\n",
-        "### 43. Swap two elements in a tuple.\n",
+        "### 39. Rotate a tuple to the left by `n` positions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 40. Rotate a tuple to the right by `n` positions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 41. Create a tuple of the first 5 Fibonacci numbers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 42. Create a tuple from user input."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 43. Swap two elements in a tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### 44. Reverse the elements of a tuple.\n",
         "### 45. Create a tuple of the first `n` powers of 2.\n",
         "### 46. Find the longest string in a tuple of strings.\n",
@@ -4754,6 +5301,18 @@
         "### 49. Check if a tuple contains another tuple as a subsequence.\n",
         "### 50. Create a tuple of alternating 1s and 0s of length `n`."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Set Based Practice Problem :"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
